# dmisys

./: .gitignore  Cargo.toml  README.md  README_zh-tw.md  makefile
.github/workflows/: rust_example.yml  rust_lib.yml
doc/: README.md  add_lib.md  dev_env.md  dri_msg.txt  example_make.md  todofn_zh.md  use_lib.md
example/: Cargo.toml  makefile
example/src/: main.rs
example/src/ds/: ds_cli.rs  ds_table.rs  mod.rs
example/src/info/: info_audio.rs  info_cpu.rs  info_desktop.rs  info_devtools.rs  info_disk.rs  info_env.rs  info_gpu.rs  info_memory.rs  info_network.rs  info_power.rs  info_system.rs  mod.rs
example/src/other/: mod.rs  output_ascii.rs  output_time.rs  output_version.rs
src/: audio.rs  battery.rs  bios.rs  cpu.rs  cv.rs  device.rs  devtools.rs  disk.rs  display.rs  env.rs  file.rs  gpu.rs  host.rs  lib.rs  memory.rs  network.rs  opengl.rs  os.rs  power.rs  regex.rs  supply.rs  systime.rs  web.rs
src/lib_dmisys/src/: cv.rs  disk.rs  gpu.rs  lib.rs  memory.rs  network.rs  os.rs  systime.rs
src/sysinfo_rs/: Cargo.toml
src/sysinfo_rs/src/: main.rs
src/sysinfo_rs/src/dmi/: cpu.rs  disk.rs  gpu.rs  mod.rs  network.rs  power.rs
src/zh-cvcal_lib/: Cargo.toml  Makefile  README.md
src/zh-cvcal_lib/example/: Cargo.toml
src/zh-cvcal_lib/example/src/: main.rs
src/zh-cvcal_lib/src/: lib.rs  num.rs  year.rs
src/zh-cvcal_lib/tests/: test.rs
