[package]
name = "dmisys"
version = "0.1.2"
edition = "2021"
authors = ["neko_0xff <neko_0xff@protonmail.com>"]
description = "This is a specialized library designed to output the hardware configuration required by the system, as well as various status information of the current device."
repository = "https://github.com/neko0xff/dmisys"
documentation = "https://docs.rs/dmisys"
categories = ["command-line-utilities"]
license = "GPL-2.0-or-later"
keywords = ["system", "infomation","linux","hardware"]

[dependencies]
get_if_addrs = "0.5.3"
isahc = "1.7.2"
regex = "1.10.6"
chrono = "0.4.40"
libc = "0.2.171"

